<resources>
    <string name="app_name" translatable="false">KUDRA</string>
    <string name="s_connection_error">Bağlantı Hatası...</string>

    <string name="s_refresh">Yenile</string>
    <string name="s_cancel">Vazgeç</string>
    <string name="s_close">Kapat</string>
    <string name="s_yes">EVET</string>
    <string name="s_cancel_caps">VAZGEÇ</string>

    <string name="s_unexpected_connection_error_has_occured">Beklenmedik bir hata oluştu.Lütfen tekrar deneyiniz.</string>
    <string name="s_cargo_confirm">Siparişinizi kargo ile teslim almayı onaylıyor musunuz?</string>

    <string name="s_today">Bugün</string>
    <string name="s_yesterday">Dün</string>
    <string name="s_log_in">GİRİŞ YAP</string>
    <string name="s_new_account">Yeni Hesap Oluştur</string>
    <string name="s_user_information">KULLANICI BİLGİLERİ</string>
    <string name="s_next">Devam</string>
    <string name="s_do_next">Devam Et</string>
    <string name="s_email_address">E-POSTA</string>
    <string name="s_password">ŞİFRE</string>
    <string name="s_skin_type">CİLT TİPİ</string>
    <string name="s_forgot_password">Şifremi Unuttum</string>
    <string name="s_please_enter_a_password">Lütfen şifrenizi giriniz.</string>
    <string name="s_please_enter_a_valid_email_address">Lütfen geçerli bir e-posta adresi giriniz.</string>
    <string name="s_successful">Başarılı İşlem !</string>
    <string name="s_error">Hata !</string>
    <string name="s_warning">Uyarı !</string>
    <string name="s_skip">Atla</string>
    <string name="s_send">GÖNDER</string>
    <string name="s_firstname">Ad</string>
    <string name="s_lastname">Soyad</string>
    <string name="s_phone_number">TELEFON NUMARASI</string>
    <string name="s_please_enter_x">Lütfen %s giriniz.</string>
    <string name="s_change_password">Şifremi Değiştir</string>
    <string name="s_save">Kaydet</string>
    <string name="s_log_out">Çıkış Yap</string>
    <string name="s_change_password_exp">Şifrenizi değiştirmek için eski ve yeni şifrenizi girerek talebinizi gönderin</string>
    <string name="s_camera">Kamera</string>
    <string name="s_photo_gallery">Fotoğraf Galerisi</string>
    <string name="s_second">Saniye</string>
    <string name="s_my_qr_code">QR KODUM</string>
    <string name="s_my_qr_code_exp">Güvenliğiniz için Kimliğiniz ( Qr Kodunuz ) 15 saniyelik periyotlarda kendini yenilemektedir.</string>
    <string name="s_detail">Detay</string>
    <string name="s_notifications">Bildirimler</string>
    <string name="s_call">Ara</string>
    <string name="s_add_cart">Sepete Ekle</string>
    <string name="s_your_address">Adresiniz</string>
    <string name="s_payment_info">Ödeme Bilgisi</string>
    <string name="s_please_enter_card_number">Lütfen Kredi Kartı numarasını giriniz</string>
    <string name="s_read_and_accept_sales_contract">Satış Sözleşmesini okudum ve kabul ediyorum.</string>
    <string name="s_secure_shop">Güvenli Alışveriş</string>
    <string name="s_with_ssl_certificate">SSL Setiifikası ile</string>
    <string name="s_buy">Satın Al</string>
    <string name="s_new_order">Yeni Sipariş</string>
    <string name="s_payment">Ödeme</string>
    <string name="s_error_occured_when_pay">Ödeme sırasında hata oluştu.</string>
    <string name="s_total">Toplam</string>
    <string name="s_ara_total">Ara Toplam</string>
    <string name="s_min_total">Minimum Sipariş Tutarı</string>

    <string name="s_order_status">Sipariş Durumu</string>
    <string name="s_please_read_and_accept_user_aggrement">Lütfen kullanıcı sözleşmesini okuyup kabul edin.</string>

    <string name="s_search">Arama</string>
    <string name="s_use">Kullan</string>
    <string name="s_count">-Sipariş Adedi-</string>

    <string name="s_send_request">Talebi Gönder</string>
    <string name="s_use_point">Kudra Puan Kullan</string>
    <string name="s_my_account">HESAP BİLGİLERİM</string>
    <string name="s_select">Seçiniz</string>
    <string name="s_log_out_exp">Uygulamadan çıkış yapmak istediğinize emin misiniz?</string>
    <string name="s_no_info">. . .</string>
    <string name="s_done">Bitti</string>
    <string name="s_active_prom">Aktif Prom.</string>
    <string name="s_used_prom">Kullanılmış Prom.</string>
    <string name="s_product_detail">Ürün Detayı</string>
    <string name="s_confirm_cart">Sepeti Onayla</string>
    <string name="s_your_cart">Sepet</string>
    <string name="s_remove_cart">Sepeti Boşalt</string>
    <string name="s_products">Ürünler</string>
    <string name="s_promotion_code">Promosyon Kodu</string>
    <string name="s_eelect_address">Adres Seçiniz</string>
    <string name="s_delivery_address">Teslimat Adresi</string>
    <string name="s_your_order_request_will_be_send">Sipariş talebiniz gönderilecek, onaylıyor musunuz?</string>
    <string name="s_my_addresses">Adreslerim</string>
    <string name="s_add_new_address">Yeni Adres Ekle</string>
    <string name="s_address_information">Adres Bilgisi</string>
    <string name="s_address_remove_exp">Adresiniz silinecektir, onaylıyor musunuz?</string>
    <string name="s_confirm">Onayla</string>
    <string name="s_title_home_work">Başlık (Ev,İşyeri)</string>
    <string name="s_address">Adres</string>
    <string name="s_city">Şehir</string>
    <string name="s_subcity">İlçe</string>
    <string name="s_address_description">Adres Tanımı</string>
    <string name="s_save_this_location">Bu Konumu Kaydet</string>
    <string name="s_select_location">Konum Seç</string>
    <string name="s_please_select_location">Lütfen konum seçiniz...</string>
    <string name="s_go_to_settings">Ayarlara Git</string>
    <string name="s_select_location_exp">Konumunuzun uygulama tarafından bulunabilmesi için Konum Servislerini açmalısınız.</string>
    <string name="s_filter_by_price_asc">Fiyata göre artan</string>
    <string name="s_filter_by_price_desc">Fiyata göre azalan</string>
    <string name="s_estiamated_time">Tahmini Süre</string>
    <string name="s_estiamated_distance">Tahmini Mesafe</string>
    <string name="s_your_delivery">Teslimatınız</string>
    <string-array name="profile_titles">
        <item>Adınız</item>
        <item>Soyadınız</item>
        <item>E-posta</item>
        <item>Telefon Numaranız</item>
        <item>Şifreyi Değiştir</item>
    </string-array>

    <string name="s_log_in_exp">Lütfen e-posta adresinizi ve şifrenizi kullanarak giriş yapın</string>
    <string name="s_pass_recovery_exp">Eğer Şifrenizi hatırlamıyorsanız, şifrenizi kurtarmak için geçerli bir e-posta adresi girip, şifrenizi kurtarma talebinde bulunabilirsiniz.</string>
    <string name="s_new_user_desc">Lütfen boş alanları doldurarak üyelik işlemlerine devam edin.</string>
    <string name="s_read_and_accept_user_contract">Kullanıcı Sözleşmesini okudum ve kabul ediyorum</string>
    <string name="s_old_pass">Eski Şifre</string>
    <string name="s_new_pass">Yeni Şifre</string>
    <string name="s_detail_info">Ayrıntılı Bilgi İçin Tıklayın</string>
    <string name="s_old_password_wrong">Eski şifreniz hatalı.</string>
    <string name="s_profile_photo">Profil Görseli</string>
    <string name="s_done_process">İŞLEMİ TAMAMLA</string>
    <string name="s_profile_photo_desc">Yeni profil görseliniz eklenecek, onaylıyor musunuz?</string>
    <string name="s_add">Ekle</string>

    <string name="s_order_code">Sipariş Kodu:</string>
    <string name="s_order_type">Sipariş Türü:</string>
    <string name="s_order_total">Sipariş Tutarı:</string>
    <string name="s_payment_type">Ödeme Şekli</string>


    <string name="s_mobile_order"><u>Mobil Sipariş</u></string>
    <string name="s_no_data">. . .</string>
    <string name="s_play_store_must_be_insatalled">Play Store yükü olmalıdır...</string>
    <string name="s_loading">Yükleniyor...</string>
    <string name="s_feedback_desc">Lütfen mesajınızı yazın...</string>
    <string name="s_photo">Mevcut Görsel</string>
    <string name="s_photo_desc">Görseli görüntülemek mi yoksa yeni görsel eklemek mi istersiniz?</string>
    <string name="s_photo_view">Görüntüle</string>
    <string name="s_photo_change">Değiştir</string>
    <string name="s_no_active_form">Aktif form bulunmamaktadır...</string>
    <string name="ExpirationDateHelp">Son Kullanma Tarihi (AA/YY)</string>
    <string name="SecurityCodeHelp">Güvenlik Kodu (CVV)</string>
    <string name="s_option_qr_scan">Promosyon kodunu sisteme tanıtmak vb. işlemleri yapabilmek için bu buton ile QR Kod\'ları taratabilirsiniz.</string>
    <string name="s_option_qr_code">Sisteme ait diğer uygulamalara kendinizi tanıtmak için bu buton ile kendinize ait QR KİMLİK KODU\'na ulaşabilirsiniz.</string>
    <string name="s_app_point">BARLEY PUAN</string>
    <string name="s_use_sasa_point">Barley Puan Kullan</string>
    <string name="s_name">AD</string>
    <string name="s_surname">SOYAD</string>
    <string name="s_new_pass_again">Yeni Şifre ( Tekrar )</string>
    <string name="s_new_paswords_not_match">Yeni şifreler aynı değil</string>
    <string name="s_order_history">Sipariş Geçmişi</string>
    <string name="s_write_your_comment">Lütfen mesajınızı yazın...</string>
    <string name="s_option_qr_scan_title">Kod Tarayıcı</string>
    <string name="s_option_qr_code_title">Qr Kimlik Kodu</string>
    <string name="s_option_qr_vale_title">Vale Kod Tarayıcı</string>
    <string name="s_option_qr_vale">Aracınızı valeden teslim almak için VALE kartınızda bulunan VALE QR kodunu taratabilirsiniz</string>
    <string name="s_contact">İletişim</string>
    <string name="s_contract">Sözleşme</string>

    <string name="s_my_promotion_desc">Kullanabileceğiniz toplam <b>Kudra Puan</b></string>
    <string name="s_total_usable_point">Toplam Kullanılabilir Puan Tutarı</string>
    <string name="s_earned_point">Kazanılan Puanlar</string>
    <string name="s_used_point">Kullanılan Puanlar</string>
    <string name="s_point_history">Puan Geçmişi</string>
    <string name="s_promotions">Promosyonlar</string>
    <string name="s_my_promotions">Promosyonlarım</string>
    <string name="s_scan_qr_code">Qr Kod Tarat</string>


    <string name="s_kudra_points">Kudra Puan</string>
    <string name="s_total_cart_amount_x">Toplam Sepet Miktarı : %s</string>
    <string name="s_enter_point_amount_here">Kullanılacak puan miktarını buraya girin</string>
    <string name="s_must_enter_as_many_point_as_your_cart_amount">Sepet miktarınız kadar puan girmelisiniz</string>
    <string name="s_used_point_amount_x">Kullanılan Puan Miktarı : %s</string>
    <string name="s_amount">miktar*</string>
    <string name="s_send_message">Bize iletmek istediğiniz mesajınız nedir?</string>


    <string name="s_name_surname">Ad Soyad</string>
    <string name="s_e_mail">E-Posta Adresi</string>
    <string name="s_phone_number_e">Telefon Numarası</string>
    <string name="s_date_of_birth">Doğum Tarihi</string>
    <string name="s_gender">Cinsiyet</string>
    <string name="s_country">Şehir</string>
    <string name="s_another_store">Diğer Mağazalar</string>

    <string name="s_choose_store">Mağazayı Seç</string>
    <string name="s_choose_another_store">Başka Mağaza Seç</string>



</resources>
